--- a/Comanda/src/app/modals/detalle-pedido-modal/detalle-pedido-modal.page.html
+++ b/Comanda/src/app/modals/detalle-pedido-modal/detalle-pedido-modal.page.html
@@ -16,6 +16,12 @@
   <ion-list>
     <ion-item *ngFor='let detalle of pedido.arrayDetalle'>
       <ion-label>{{detalle.cantidad}} - {{detalle.nombre}}</ion-label>
+      <ion-button *ngIf="detalle.estado != 'EN PROGRESO'" expand="block" (click)="cambiarEstadoDetalle(pedido,detalle, 'EN PROGRESO')" color='primary' fill="outline">
+        Comenzar
+      </ion-button>
+      <ion-button *ngIf="pedido.estado == 'EN PROGRESO'" expand="block" (click)="cambiarEstadoDetalle(pedido,detalle, 'TERMINADO')" color='primary' fill="outline">
+        Terminar
+      </ion-button>
     </ion-item>
     <ion-item *ngIf="pedido.estado == 'PENDIENTE'">
       <ion-label>
@@ -26,6 +32,13 @@
       <ion-label>
         <ion-button expand="block" (click)="cambiarEstado(pedido, 'CANCELADO')" color='danger' fill="outline">
           Cancelar
+        </ion-button>
+      </ion-label>
+    </ion-item>
+    <ion-item *ngIf="pedido.estado == 'ESPERANDO CUENTA'">
+      <ion-label>
+        <ion-button expand="block" (click)="cerrarMesa(pedido)" color='primary' fill="outline">
+          Cerrar Mesa
         </ion-button>
       </ion-label>
     </ion-item>
