--- a/Comanda/src/app/modals/detalle-pedido-modal/detalle-pedido-modal.page.html
+++ b/Comanda/src/app/modals/detalle-pedido-modal/detalle-pedido-modal.page.html
@@ -14,15 +14,16 @@
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor='let detalle of pedido.arrayDetalle'>
+    <ion-item *ngFor='let detalle of auxArrayDetalle'>
       <ion-label>{{detalle.cantidad}} - {{detalle.nombre}}</ion-label>
-      <ion-button *ngIf="detalle.estado != 'EN PROGRESO'" expand="block" (click)="cambiarEstadoDetalle(pedido,detalle, 'EN PROGRESO')" color='primary' fill="outline">
+      <ion-button *ngIf="currentRol != MOZO && detalle.estado != 'EN PROGRESO' && detalle.estado != 'TERMINADO'" expand="block" (click)="cambiarEstadoDetalle(pedido,detalle, 'EN PROGRESO')" color='primary' fill="outline">
         Comenzar
       </ion-button>
-      <ion-button *ngIf="pedido.estado == 'EN PROGRESO'" expand="block" (click)="cambiarEstadoDetalle(pedido,detalle, 'TERMINADO')" color='primary' fill="outline">
+      <ion-button *ngIf="currentRol != MOZO && detalle.estado == 'EN PROGRESO'" expand="block" (click)="cambiarEstadoDetalle(pedido,detalle, 'TERMINADO')" color='primary' fill="outline">
         Terminar
       </ion-button>
     </ion-item>
+
     <ion-item *ngIf="pedido.estado == 'PENDIENTE'">
       <ion-label>
         <ion-button expand="block" (click)="cambiarEstado(pedido, 'CONFIRMADO')" color='primary' fill="outline">
