--- a/Comanda/src/app/home/home.page.html
+++ b/Comanda/src/app/home/home.page.html
@@ -1,5 +1,6 @@
 <ion-content>
-  <ngx-spinner></ngx-spinner>
+  <!--<ngx-spinner ></ngx-spinner>-->
+ 
   <ion-button *ngxPermissionsOnly="['DUEÑO', 'SUPERVISOR']" color="primary" fill="outline" expand="block"
     (click)="goTo('alta', 'S')" class="top">
     Alta Dueño/Supervisor
@@ -40,7 +41,14 @@
     class="top">
     Graficos
   </ion-button>
-
+  <ion-button *ngxPermissionsOnly="['CLIENTE']" color="primary" fill="outline" expand="block" (click)="goTo('solicitar-cuenta')"
+  class="top">
+  TEST BORRAR DE ACA!! propinas
+</ion-button>
+<ion-button *ngxPermissionsOnly="['CLIENTE']" color="primary" fill="outline" expand="block" (click)="goTo('propinas')"
+class="top">
+TEST BORRAR DE ACA!! pedir cuenta
+</ion-button>
 
   <!-- botones solo disponible para el metre-->
   <ion-button *ngxPermissionsOnly="['METRE']" color="primary" fill="outline" expand="block" (click)="goTo('lista-espera-metre')"
